Changed portfolio and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,9 @@
           <!-- Фильтр с кнопками -->
           <ul class="list filter">
             <li class="filter-item">
-              <button type="button" class="portfolio-button">Все</button>
+              <button type="button" class="portfolio-button current">
+                Все
+              </button>
             </li>
             <li class="filter-item">
               <button type="button" class="portfolio-button">Веб-сайты</button>
@@ -91,136 +93,154 @@
           <!-- Примеры работ -->
           <ul class="list flex">
             <li class="flex-element">
-              <img
-                src="./images/techcrack.jpg"
-                alt="Главная страница веб-сайта"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">Технокряк</h2>
-                <p class="section-text-project">Веб-сайт</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/techcrack.jpg"
+                  alt="Главная страница веб-сайта"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">Технокряк</h2>
+                  <p class="section-text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/poster.jpg"
-                alt="Постер для баскетбольного матча"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="section-text-project">Дизайн</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/poster.jpg"
+                  alt="Постер для баскетбольного матча"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="section-text-project">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/seafood.jpg"
-                alt="Логотип приложения ресторана"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Ресторан <span lang="en">Seafood</span>
-                </h2>
-                <p class="section-text-project">Приложение</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/seafood.jpg"
+                  alt="Логотип приложения ресторана"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="section-text-project">Приложение</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/prime.jpg"
-                alt="Наушники как заставка проекта"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Проект <span lang="en">Prime</span>
-                </h2>
-                <p class="section-text-project" lang="en">Маркетинг</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/prime.jpg"
+                  alt="Наушники как заставка проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Проект <span lang="en">Prime</span>
+                  </h2>
+                  <p class="section-text-project" lang="en">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/boxes.jpg"
-                alt="Два макета коробок из проекта"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Проект <span lang="en">Boxes</span>
-                </h2>
-                <p class="section-text-project">Приложение</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/boxes.jpg"
+                  alt="Два макета коробок из проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Проект <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="section-text-project">Приложение</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/inspiration.jpg"
-                alt="Главная страница веб-сайта"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project" lang="en">
-                  Inspiration has no Borders
-                </h2>
-                <p class="section-text-project">Веб-сайт</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Главная страница веб-сайта"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="section-text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/limited-edition.jpg"
-                alt="Разворот журнала"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Издание <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="section-text-project">Дизайн</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/limited-edition.jpg"
+                  alt="Разворот журнала"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="section-text-project">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/lab.jpg"
-                alt="Макет лейбла из проекта"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project">
-                  Проект <span lang="en">LAB</span>
-                </h2>
-                <p class="section-text-project">Маркетинг</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/lab.jpg"
+                  alt="Макет лейбла из проекта"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project">
+                    Проект <span lang="en">LAB</span>
+                  </h2>
+                  <p class="section-text-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="flex-element">
-              <img
-                src="./images/growing-business.jpg"
-                alt="Главная страница приложения"
-                width="370"
-                height="294"
-              />
-              <div class="section-project-description">
-                <h2 class="section-title-project" lang="en">
-                  Growing Business
-                </h2>
-                <p class="section-text-project">Приложение</p>
-              </div>
+              <a class="flex-element-link" href="">
+                <img
+                  src="./images/growing-business.jpg"
+                  alt="Главная страница приложения"
+                  width="370"
+                  height="294"
+                />
+                <div class="section-project-description">
+                  <h2 class="section-title-project" lang="en">
+                    Growing Business
+                  </h2>
+                  <p class="section-text-project">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
